# pelicide-v2

./: .drone.yml  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tasks.py
pelicide/: __main__.py  pelican-runner.py  runner.py  service.py  sites.py  util.py
