[tool.poetry]
name = "pelicide"
version = "1.9.0"
description = "An IDE for Pelican sites."
authors = ["Ingmar Steen <iksteen@gmail.com>"]
license = "MIT"
include = ["pelicide/ui/*", "pelicide/ui/**/*"]
exclude = ["pelicide/ui/.gitkeep"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
pre-commit = "^1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
