[tool.poetry]
name = "pelicide"
version = "1.9.0"
description = "An IDE for Pelican sites."
authors = ["Ingmar Steen <iksteen@gmail.com>"]
license = "MIT"
include = ["pelicide/ui/*", "pelicide/ui/**/*"]
exclude = ["pelicide/ui/.gitkeep"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
aiohttp-json-rpc = "^0.12.1"
component-injector = {git = "https://github.com/iksteen/component-injector.git",branch = "feature/wrapt"}
jsonschema = "^3.0"
appdirs = "^1.4"
click = "^7.0"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.14"

[tool.poetry.scripts]
pelicide = 'pelicide.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
